# dotenv

./: .gitignore  Cargo.toml  README.md
proc_test/: .env  Cargo.toml
proc_test/src/: lib.rs
src/: lib.rs
